Fixed server flags